trying to fix hover on mobile

--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -62,7 +62,7 @@ header {
                 color: #f3f4f5;
                 text-align: center;
             }
-            &:hover {
+            &:hover, .navbar__element:active {
                 color: darken($primary-color, 4%);
                 background-color: #f3f4f5;
                 border-radius: 50px;
